--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{"homepage":"http://TheTempest7.github.io/currencydiffer",
+{
+  "homepage": "http://TheTempest7.github.io/currencydiffer",
   "name": "currencydiffer",
   "version": "0.1.0",
   "private": true,
@@ -14,8 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
